--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">Company Profile</div>
-                                    <p class="mb-0">Saya pernah membuat Company Profile untuk Sanjaya IT Solution. </p>
+                                    <p class="mb-0">Saya pernah membuat Company Profile untuk Sanjaya IT Solution berbasis Web. </p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="..." />
@@ -124,7 +124,7 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">Desain UI Website</div>
-                                    <p class="mb-0">Membuat desain UI website bertemakan Tukang dengan menggumakan Power Point.</p>
+                                    <p class="mb-0">Membuat desain UI website bertemakan Tukang.</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="..." />
@@ -146,7 +146,7 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">Membuat Website Sederhana</div>
-                                    <p class="mb-0">Membuat website sederhana yang bertema Potofolio Masing-masing.</p>
+                                    <p class="mb-0">Membuat website Portofolio.</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-4.jpg" alt="..." />
